fixed letter spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,6 @@ body {
     height: auto;
     margin: 0;
     padding: 0;
-    letter-spacing: 0.02em;
     visibility: hidden;
 }
 
